[project]
name = "private-vault-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohit Hapani",email = "mohit.hapani@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "langchain (>=1.3.13,<2.0.0)",
    "langchain-openai (>=1.3.5,<2.0.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "pypdf (>=6.14.2,<7.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "streamlit (>=1.59.2,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "paddlepaddle (>=3.3.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
